updated code with login and rest password
