# swagger_server/models/reset_password_request.py
@@ -1,114 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class ResetPasswordRequest(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, username: str=None, new_password: str=None, otp: str=None):  # noqa: E501
-        """ResetPasswordRequest - a model defined in Swagger
-
-        :param username: The username of this ResetPasswordRequest.  # noqa: E501
-        :type username: str
-        :param new_password: The new_password of this ResetPasswordRequest.  # noqa: E501
-        :type new_password: str
-        :param otp: The otp of this ResetPasswordRequest.  # noqa: E501
-        :type otp: str
-        """
-        self.swagger_types = {
-            'username': str,
-            'new_password': str,
-            'otp': str
-        }
-
-        self.attribute_map = {
-            'username': 'username',
-            'new_password': 'newPassword',
-            'otp': 'otp'
-        }
-        self._username = username
-        self._new_password = new_password
-        self._otp = otp
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ResetPasswordRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The ResetPasswordRequest of this ResetPasswordRequest.  # noqa: E501
-        :rtype: ResetPasswordRequest
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def username(self) -> str:
-        """Gets the username of this ResetPasswordRequest.
-
-
-        :return: The username of this ResetPasswordRequest.
-        :rtype: str
-        """
-        return self._username
-
-    @username.setter
-    def username(self, username: str):
-        """Sets the username of this ResetPasswordRequest.
-
-
-        :param username: The username of this ResetPasswordRequest.
-        :type username: str
-        """
-
-        self._username = username
-
-    @property
-    def new_password(self) -> str:
-        """Gets the new_password of this ResetPasswordRequest.
-
-
-        :return: The new_password of this ResetPasswordRequest.
-        :rtype: str
-        """
-        return self._new_password
-
-    @new_password.setter
-    def new_password(self, new_password: str):
-        """Sets the new_password of this ResetPasswordRequest.
-
-
-        :param new_password: The new_password of this ResetPasswordRequest.
-        :type new_password: str
-        """
-
-        self._new_password = new_password
-
-    @property
-    def otp(self) -> str:
-        """Gets the otp of this ResetPasswordRequest.
-
-
-        :return: The otp of this ResetPasswordRequest.
-        :rtype: str
-        """
-        return self._otp
-
-    @otp.setter
-    def otp(self, otp: str):
-        """Sets the otp of this ResetPasswordRequest.
-
-
-        :param otp: The otp of this ResetPasswordRequest.
-        :type otp: str
-        """
-
-        self._otp = otp
