# swagger_server/models/send_password_request.py
@@ -9,15 +9,15 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class SendOtpRequest(Model):
+class SendPasswordRequest(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, email: str=None):  # noqa: E501
-        """SendOtpRequest - a model defined in Swagger
+        """SendPasswordRequest - a model defined in Swagger
 
-        :param email: The email of this SendOtpRequest.  # noqa: E501
+        :param email: The email of this SendPasswordRequest.  # noqa: E501
         :type email: str
         """
         self.swagger_types = {
@@ -30,32 +30,32 @@ class SendOtpRequest(Model):
         self._email = email
 
     @classmethod
-    def from_dict(cls, dikt) -> 'SendOtpRequest':
+    def from_dict(cls, dikt) -> 'SendPasswordRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The SendOtpRequest of this SendOtpRequest.  # noqa: E501
-        :rtype: SendOtpRequest
+        :return: The SendPasswordRequest of this SendPasswordRequest.  # noqa: E501
+        :rtype: SendPasswordRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def email(self) -> str:
-        """Gets the email of this SendOtpRequest.
+        """Gets the email of this SendPasswordRequest.
 
 
-        :return: The email of this SendOtpRequest.
+        :return: The email of this SendPasswordRequest.
         :rtype: str
         """
         return self._email
 
     @email.setter
     def email(self, email: str):
-        """Sets the email of this SendOtpRequest.
+        """Sets the email of this SendPasswordRequest.
 
 
-        :param email: The email of this SendOtpRequest.
+        :param email: The email of this SendPasswordRequest.
         :type email: str
         """
 
